# Arkadia

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/skills/agent-coder/: SKILL.md
common/: __init__.py  config.py  i2c.py  models.py  mqtt.py
config/: global.toml
docs/: dev-plan.md  tech-design.md
mosquitto/: mosquitto.conf
scripts/: deploy.sh  setup.sh
services/: docker-compose.yaml
services/api/: api.service  config.toml  main.py  requirements.txt  store.py  ws.py
services/api/routes/: audio.py  health.py  sensors.py  version.py
services/audio/: audio.service  config.toml  main.py  requirements.txt  sensor.py
services/bme280/: bme280.service  config.toml  main.py  requirements.txt  sensor.py
services/data/: Dockerfile  conftest.py  main.py  requirements.txt
services/data/tests/: test_main.py
services/scd40/: config.toml  main.py  requirements.txt  scd40.service  sensor.py
services/sgp40/: config.toml  main.py  requirements.txt  sensor.py  sgp40.service
services/tph/: Dockerfile  bme280_client.py  main.py  requirements.txt
services/tph/tests/: test_tph.py
services/web/: Dockerfile  package.json
services/web/public/: index.html
services/web/src/: App.js  api.js
skills/: pi-deployment.md
tests/: test_api_connectivity.py  test_api_routes.py  test_api_store.py  test_api_ws.py  test_audio.py  test_bme280.py  test_config.py  test_i2c.py  test_models.py  test_mqtt.py  test_scd40.py  test_sgp40.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  api.js  main.js
(+12 files in other folders)
